--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>17</java.version>
-		<sonar.host.url>http://4.224.22.164:9000/</sonar.host.url>
+		<sonar.host.url>http://98.70.12.169:9000/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
-                <sonar.password>admin1</sonar.password>
+                <sonar.password>Silent@king1725</sonar.password>
       
 	</properties>
 
